# Project-E

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  getting_started.html  index.html  lexicon.html  overview.html  print.html  r-type_client  r-type_server  searchindex.js  searchindex.json
2ndGame/game/: Archetypes.hpp  AssetsPath.hpp  CMakeLists.txt  Components.hpp  Decor.cpp  Decor.hpp  Enemy.cpp  Enemy.hpp  MainMenu.cpp  MainMenu.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Systems.cpp  Systems.hpp  Tower.cpp  Tower.hpp  main.cpp
engine/: CMakeLists.txt  Server.cpp  engine.html
engine/libs/: CMakeLists.txt
engine/libs/deprecared/: Client.hpp  Gateway.hpp  Server.hpp  Socket.hpp  TSQueue.hpp  Test.hpp
engine/libs/lib_ecs/: AEntityManager.cpp  AEntityManager.hpp  CMakeLists.txt  EntityManager.cpp  EntityManager.hpp  GenerateEntity.py  Makefile  PointGoingUp.cpp  PointGoingUp.hpp  main.cpp
engine/libs/lib_ecs/Chunks/: AChunk.hpp  AChunkPool.hpp  ChunkPos.cpp  IChunk.hpp  IChunkPool.hpp  StandardChunk.hpp  StandardChunkPool.hpp
engine/libs/lib_ecs/Components/: AComponentPool.hpp  ArchComponentConcept.hpp  ComponentConcept.hpp  ComponentPool.hpp  ComponentPoolConcept.hpp  ComponentRef.hpp  ComponentRefs.hpp  ComponentVal.hpp  IComponentPool.hpp  IComponentRef.hpp  PureComponentPools.hpp
engine/libs/lib_ecs/Core/: ArchetypeWithPoolsMaker.hpp  ArchetypeWithRefsMaker.hpp  ArchetypeWithValsMaker.hpp  ComponentMaker.hpp  PureArchetypes.hpp  PureComponents.hpp  RawArchComponentMaker.hpp  RawArchComponents.hpp  Types.hpp
engine/libs/lib_ecs/Demo/: Epee.cpp  Epee.hpp  ExamplePoint.cpp  ExamplePoint.hpp  Systems.cpp  Systems.hpp
engine/libs/lib_ecs/Entities/: AArchetypeConcepts.hpp  AArchetypePool.hpp  AArchetypes.hpp  AEntityPool.cpp  AEntityPool.hpp  AEntityRef.cpp  AEntityRef.hpp  Archetype.hpp  ArchetypePool.hpp  ArchetypeRef.hpp  ArchetypeVal.hpp  ArchetypeWithConcepts.hpp  Aspect.hpp  BaseArchetype.hpp  IArchetypePool.hpp  IArchetypeRef.hpp  IArchetypes.hpp  IEntityPool.hpp  IEntityRef.hpp  PureEntities.cpp  PureEntities.hpp  PureEntityPools.cpp  PureEntityPools.hpp
engine/libs/lib_ecs/Systems/: ADualSystem.hpp  AMonoSystem.hpp  ASystem.hpp  IQuery.hpp  ISystem.hpp  Query.hpp  SystemTree.cpp  SystemTree.hpp  _ASystem.hpp
engine/libs/lib_ecs/Utils/: ConstructedInheritor.hpp  IndexedInheritor.hpp  TupleClass.hpp  TypeSet.hpp
engine/libs/lib_ecs/src/: EntityManager.cpp  EntityManager.hpp
engine/libs/lib_ecs/src/Chunks/: AChunk.hpp  AChunkPool.hpp  (+7 more)
engine/libs/lib_log/: CMakeLists.txt  log.cpp  log.hpp
engine/libs/lib_net/: BaseClient.hpp  BaseServer.hpp  Buf2.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Connection.hpp  Context.cpp  Context.hpp  Gateway.hpp  OwnedPacket.hpp  Packet.cpp  Packet.hpp  Server.cpp  Server.hpp  Socket.hpp  TCPSocket.cpp  TCPSocket.hpp  TSQueue.hpp  UDPInfo.cpp  UDPInfo.hpp  UDPSocket.cpp  UDPSocket.hpp  lib.hpp  net.hpp
engine/libs/lib_net/io/: Mutex.hpp  Read.cpp  Read.hpp  Result.hpp  Write.cpp  Write.hpp
engine/libs/lib_net/net/: AddrParseError.hpp  IpAddr.cpp  IpAddr.hpp  Poll.cpp  Poll.hpp  Poll_linux.cpp  Poll_windows.cpp  Socket.cpp  Socket.hpp  SocketAddr.cpp  SocketAddr.hpp  TcpListener.cpp  TcpListener.hpp  TcpStream.cpp  TcpStream.hpp  UdpSocket.cpp  UdpSocket.hpp  _base.hpp
engine/libs/lib_net/result/: Result.hpp
engine/libs/lib_net/super/: BaseServer.cpp  BaseServer.hpp  Server.cpp  Server.hpp  TSQueue.hpp
engine/libs/lib_net/tests/: basic.cpp
engine/libs/lib_net/uuid/: Uuid.hpp  UuidGenerator.hpp
engine/libs/log/: log.hpp
engine/libs/net/: CMakeLists.txt  Connection.hpp  OwnedPacket.hpp  Packet.hpp
engine/libs/net/tests/: basic.cpp
engine/modules/: CMakeLists.txt  IModule.hpp  creating_a_module.html  how_to_add_module.html  modules.html  registry.html
engine/modules/TestModule/: TestModule.cpp  TestModule.hpp
engine/modules/core/: CMakeLists.txt  Components.hpp  Core.hpp  Systems.cpp  Systems.hpp
engine/modules/dummy/: Components.hpp  DummyModule.hpp  Systems.cpp  Systems.hpp
engine/modules/ecs/: CMakeLists.txt  ComponentStatus.hpp  World.hpp  ecs.hpp  test.cpp
engine/modules/ecs/utils/: debug.hpp
engine/modules/game/: Components.hpp  Game.hpp  Systems.cpp
engine/modules/modules/network/: network.html
engine/modules/modules/render/: render.html
engine/modules/modules/spatial2d/: spatial2d.html
engine/modules/network/: CMakeLists.txt  Client.hpp  Components.hpp  Network.hpp  Server.hpp  Systems.cpp  Systems.hpp  TestClient.cpp  TestClient.hpp  TestServer.cpp  TestServer.hpp
engine/modules/physics/: CMakeLists.txt  physics.cpp
engine/modules/render/: AAnimatedEntity.cpp  AAnimatedEntity.hpp  ASpriteEntity.cpp  ASpriteEntity.hpp  Aspects.hpp  AssetsLoader.hpp  CMakeLists.txt  Components.hpp  Render.hpp  Systems.cpp  Systems.hpp  render.hpp
engine/modules/render/include/: render.hpp
engine/modules/render/tests/: render_test.cpp
engine/modules/spatial2d/: ADynamicEntity.cpp  ADynamicEntity.hpp  AStaticEntity.cpp  AStaticEntity.hpp  Aspects.hpp  CMakeLists.txt  Components.hpp  Spatial2D.hpp  Systems.cpp  Systems.hpp
map_editor/: CMakeLists.txt  main.cpp
rtype/: CMakeLists.txt  main.cpp
rtype/client/: Archetypes.hpp  AssetsLoader.hpp  AssetsPath.hpp  CMakeLists.txt  ClientSystems.cpp  ClientSystems.hpp  DecorSquare.cpp  DecorSquare.hpp  DrawSystems.cpp  DrawSystems.hpp  MainMenu.cpp  MainMenu.hpp  NetSystems.cpp  NetSystems.hpp  NetworkManager.hpp  RTypeClient.cpp  RTypeClient.hpp  Square.cpp  Square.hpp  Systems.cpp  Systems.hpp  main.cpp  raygui.h
rtype/common/: Aspects.hpp  CMakeLists.txt  Components.hpp  DecorEntities.cpp  DecorEntities.hpp  DecorSquare.cpp  DecorSquare.hpp  GameEntities.cpp  GameEntities.hpp  NetworkManager.hpp  RTypePackets.hpp  Square.cpp  Square.hpp  Systems.cpp  Systems.hpp  lib.cpp  lib.hpp
rtype/server/: Archetypes.hpp  CMakeLists.txt  RTypeServer.cpp  RTypeServer.hpp  ServerSystems.cpp  ServerSystems.hpp  main.cpp
(+204 files in other folders)
